--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@nivo/bump": "^0.85.1",
     "@nivo/calendar": "^0.85.1",
     "@nivo/core": "^0.85.1",
+    "@nivo/line": "^0.85.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-table": "^8.15.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
